gcc/testsuite/rust/rustc/ui/codemap_tests/unicode.rs
extern "路濫狼á́́" fn foo() {} // { dg-error ".E0703." "" { target *-*-* } }

fn main() { }

